@@ -61,6 +61,7 @@
 	- eliminate unused get_magic.pl, magic.{prov,req}, use libmagic instead.
 	- eliminate "traditional behavior" freshen.sh.
 	- add default value for buildroot macro.
+	- permit macros to be marked as readonly (i.e. cannot be redefined).
 
 4.4.5 -> 4.4.6:
 	- start 4.4.6 development.
